# wayfire-ext-workspace-manager

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  meson.build
metadata/: ext-workspace-manager.xml  meson.build
protocol/: meson.build
src/: ext-workspace-manager.cpp  meson.build
